[gd_scene load_steps=15 format=2]

[ext_resource path="res://Entity/Boss/Wizard/WizardSpriteframes.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Entity/Boss/Wizard/WizardFight/WizardFight.gd" type="Script" id=2]
[ext_resource path="res://Entity/Boss/Wizard/WizardBeam.tscn" type="PackedScene" id=3]
[ext_resource path="res://Entity/Decor/Breach/Portal/Portal.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sound/Movement/LightWoosh.wav" type="AudioStream" id=5]

[sub_resource type="Animation" id=1]
resource_name = "attack_spin"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.54, 1 ),
"update": 0,
"values": [ 0.0, -360.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("AnimatedSprite")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "default", false ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "death"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 96 ) ]
}

[sub_resource type="Animation" id=3]
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("LeftBeam:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 5.5 ),
"transitions": PoolRealArray( 1, 0.6, 1 ),
"update": 0,
"values": [ 90.0, 90.0, 20.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RightBeam:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 5.5 ),
"transitions": PoolRealArray( 1, 0.6, 1 ),
"update": 0,
"values": [ -90.0, -90.0, -20.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "escape"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1.1487, 1 ),
"update": 0,
"values": [ Vector2( 0, 96 ), Vector2( 0, -600 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, -100 ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.353554, 1 ),
"update": 0,
"values": [ Vector2( 0, 600 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimatedSprite:z_index")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ -100, 0 ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("WooshEntryAudioStreamPlayer2D")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 0.2 )
}

[sub_resource type="Animation" id=6]
length = 2.0
tracks/0/type = "method"
tracks/0/path = NodePath("AnimatedSprite")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ "concentrate", false ],
"method": "play"
}, {
"args": [ "default", false ],
"method": "play"
} ]
}

[sub_resource type="CircleShape2D" id=7]
radius = 48.0

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath("Portal:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Portal:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath("Portal:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Portal:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="WizardFight" type="KinematicBody2D" groups=[
"boss",
]]
collision_layer = 64
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack_spin = SubResource( 1 )
anims/death = SubResource( 2 )
anims/double_beam = SubResource( 3 )
anims/escape = SubResource( 4 )
anims/fly_in = SubResource( 5 )
anims/start = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="LeftRayCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -49, 0 )

[node name="RightRayCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 49, 0 )

[node name="StateTimer" type="Timer" parent="."]

[node name="MiddleBeam" parent="." instance=ExtResource( 3 )]
z_index = -1

[node name="LeftBeam" parent="." instance=ExtResource( 3 )]
rotation = 1.5708
z_index = -1

[node name="RightBeam" parent="." instance=ExtResource( 3 )]
rotation = -1.5708
z_index = -1

[node name="Portal" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 72 )

[node name="PortalAnimationPlayer" type="AnimationPlayer" parent="."]
anims/hide = SubResource( 8 )
anims/show = SubResource( 9 )

[node name="WooshAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -2.0
bus = "Effects"

[node name="WooshEntryAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0, 120 )
stream = ExtResource( 5 )
bus = "Effects"
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="StateTimer" to="." method="_on_StateTimer_timeout"]
[connection signal="animation_finished" from="PortalAnimationPlayer" to="." method="_on_PortalAnimationPlayer_animation_finished"]
